# VulnForge

./: .env.example  .gitignore
backend/: Dockerfile  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_rls.py  6a4ae86c9bdc_initial_schema.py  9f49298ff25b_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: images.py  merge_requests.py  registries.py  scans.py
backend/app/core/: auth.py  celery_app.py  config.py  credentials.py  db.py  logging.py  semaphore.py  team_scope.py  url_validator.py
backend/app/models/: audit_log.py  base.py  finding.py  image.py  merge_request.py  registry.py  scan.py  user.py
backend/app/schemas/: finding.py  image.py  merge_request.py  registry.py  scan.py
backend/app/services/: audit_service.py  image_service.py  mr_service.py  registry_service.py  scan_service.py  user_service.py
backend/app/tasks/: mr_task.py  scan_task.py
backend/app/workers/: branch_resolver.py  findings_parser.py  gitlab_client.py  patch_generator.py  trivy_client.py
backend/app/workers/registry_adapters/: __init__.py  acr.py  base.py  ecr.py  (+3 more)
backend/scripts/: rotate_dek.py
backend/tests/: conftest.py  test_adapters.py  test_auth.py  test_branch_resolver.py  test_credentials.py  test_findings_parser.py  test_gitlab_client.py  test_image_api.py  test_image_service.py  test_models.py  test_mr_api.py  test_mr_task.py  test_patch_generator.py  test_registry_api.py  test_registry_service.py  test_rotate_dek.py  test_scan_api.py  test_scan_task.py  test_semaphore.py  test_trivy_client.py  test_url_validator.py
(+58 files in other folders)
